# motto-fleet-ops

./: .coverage  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  observability.py  pyproject.toml  requirements.txt  sentry_init.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: provision.yml
agent/: agent.py
audit/: provision-log.jsonl
burn-rate/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  requirements.txt  sentry_init.py
burn-rate/.fleet/: ci-broken-investigation.md
burn-rate/agent/: __init__.py
docs/: README.md
motto_fleet_ops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
provisioner/: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md
provisioner/.fleet/: ci-broken-investigation.md
provisioner/.github/: dependabot.yml
provisioner/.github/workflows/: dispatch-shim-template.yml  provision.yml
provisioner/scripts/: parse_request.py
scripts/: append_audit.py  comment_back.sh  grant_secrets.sh  parse_request.py
tests/: test_agent.py  test_observability.py  test_provisioner.py
