[project]
name = "motto-fleet-ops"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["provisioner*", "burn-rate*", "audit*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pandas>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["provisioner", "burn-rate"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 50
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "def __repr__",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
